--- a/coffeeshop-app/build.gradle
+++ b/coffeeshop-app/build.gradle
@@ -19,6 +19,8 @@ dependencies {
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'io.projectreactor:reactor-test'
+    testImplementation 'org.mockito:mockito-core:5.5.0'
+    testImplementation 'org.hamcrest:hamcrest-all:1.3'
 
 //    implementation 'org.springframework.boot:spring-boot-starter'
 }
