--- a/coffeeshop-app/build.gradle
+++ b/coffeeshop-app/build.gradle
@@ -3,7 +3,7 @@ plugins {
 }
 
 dependencies {
-    implementation project(':coffeeshop-domain')
+    implementation project(':coffeeshop-cart-domain')
     implementation project(':coffeeshop-infra')
 
     implementation 'org.springframework.boot:spring-boot-starter-data-mongodb-reactive'
@@ -21,6 +21,4 @@ dependencies {
     testImplementation 'io.projectreactor:reactor-test'
     testImplementation 'org.mockito:mockito-core:5.5.0'
     testImplementation 'org.hamcrest:hamcrest-all:1.3'
-
-//    implementation 'org.springframework.boot:spring-boot-starter'
 }
