--- a/coffeeshop-infra/build.gradle
+++ b/coffeeshop-infra/build.gradle
@@ -1,22 +1,5 @@
-//plugins {
-//    id 'java'
-//    id 'org.springframework.boot' version '3.1.3'
-//    id 'io.spring.dependency-management' version '1.1.3'
-//}
-
-//group = 'com.trafilea'
-//version = '0.0.1-SNAPSHOT'
-
-//java {
-//    sourceCompatibility = '17'
-//}
-
-//repositories {
-//    mavenCentral()
-//}
-
 dependencies {
-    implementation project(':coffeeshop-domain')
+    implementation project(':coffeeshop-cart-domain')
 
     implementation 'org.springframework.boot:spring-boot-starter-data-mongodb-reactive'
     implementation 'org.springframework.boot:spring-boot-starter-web'
@@ -24,16 +7,8 @@ dependencies {
 
     compileOnly 'org.projectlombok:lombok'
 
-//    developmentOnly 'org.springframework.boot:spring-boot-devtools'
-
     annotationProcessor 'org.projectlombok:lombok'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'io.projectreactor:reactor-test'
-
-//    implementation 'org.springframework.boot:spring-boot-starter'
 }
-
-//tasks.named('test') {
-//    useJUnitPlatform()
-//}
